[tool.poetry]
name = "excel-validator"
version = "0.1.0"
description = ""
authors = ["Michal Kesicki"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl="^3.0.9"
progress="^1.6"
pyyaml="^5.3"
validate-email="^1.1.3"
pycountry="^20.7.3"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
